Thesis/force-app/main/default/objects/Animal__c/fields/AdaptationRecomendations__c.field-meta.xml
<CustomField>
    <fullName>AdaptationRecomendations__c</fullName>
    <label>Adaptation recomendations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>