Thesis/force-app/main/default/objects/Animal__c/fields/AdoptationalEndDate__c.field-meta.xml
<CustomField>
    <fullName>AdoptationalEndDate__c</fullName>
    <label>Planned adoptational end date</label>
    <type>Date</type>
</CustomField>