Thesis/force-app/main/default/objects/Animal__c/fields/AdoptationStartDate__c.field-meta.xml
<CustomField>
    <fullName>AdoptationStartDate__c</fullName>
    <label>Adoptation start date</label>
    <type>Date</type>
</CustomField>