Thesis/force-app/main/default/objects/Animal__c/fields/AnimalAdaptationStatus__c.field-meta.xml
<CustomField>
    <fullName>AnimalAdaptationStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for adaptation</fullName>
                <default>true</default>
                <label>Waiting for adaptation</label>
            </value>
            <value>
                <fullName>Under consideration</fullName>
            </value>
            <value>
                <fullName>In the process of adaptation</fullName>
            </value>
            <value>
                <fullName>Adapted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>