Thesis/force-app/main/default/objects/Animal__c/fields/AnimalMedicalCost__c.field-meta.xml
<CustomField>
    <fullName>AnimalMedicalCost__c</fullName>
    <label>Medical cost</label>
    <summarizedField>MedicalExamination__c.MedicalCost__c</summarizedField>
    <summaryForeignKey>MedicalExamination__c.Animal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>