Thesis/force-app/main/default/objects/Animal__c/fields/AnimalUniqueNumber__c.field-meta.xml
<CustomField>
    <fullName>AnimalUniqueNumber__c</fullName>
    <displayFormat>AN#{0000}</displayFormat>
    <label>Animal unique number</label>
    <type>AutoNumber</type>
</CustomField>