Thesis/force-app/main/default/objects/Animal__c/fields/DataUrodzenia__c.field-meta.xml
<CustomField>
    <fullName>DataUrodzenia__c</fullName>
    <label>Data urodzenia</label>
    <type>Date</type>
</CustomField>