Thesis/force-app/main/default/objects/Animal__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>