Thesis/force-app/main/default/objects/Animal__c/fields/KindAnimal__c.field-meta.xml
<CustomField>
    <fullName>KindAnimal__c</fullName>
    <description>Describes the type of animal</description>
    <label>Animal kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>