Thesis/force-app/main/default/objects/Animal__c/fields/Opis__c.field-meta.xml
<CustomField>
    <fullName>Opis__c</fullName>
    <label>Opis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>