Thesis/force-app/main/default/objects/Animal__c/fields/PetOwnerAddress__c.field-meta.xml
<CustomField>
    <fullName>PetOwnerAddress__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>