Thesis/force-app/main/default/objects/Animal__c/fields/PetOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>PetOwnerEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>