Thesis/force-app/main/default/objects/Animal__c/fields/PetOwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>PetOwnerFirstName__c</fullName>
    <label>First name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>