Thesis/force-app/main/default/objects/Animal__c/fields/PetOwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>PetOwnerLastName__c</fullName>
    <label>Last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>