Thesis/force-app/main/default/objects/Animal__c/fields/PetOwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>PetOwnerPhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>