Thesis/force-app/main/default/objects/Animal__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>