Thesis/force-app/main/default/objects/Animal__c/recordTypes/AnimalRecordType.recordType-meta.xml
<RecordType>
    <fullName>AnimalRecordType</fullName>
    <active>true</active>
    <label>Animal record type</label>
</RecordType>