Thesis/force-app/main/default/objects/Animal__c/validationRules/AdaptationDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>AdaptationDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AdoptationStartDate__c &gt; AdoptationalEndDate__c</errorConditionFormula>
    <errorMessage>The date of the planned end of adaptation cannot be earlier than the start date of adaptation</errorMessage>
</ValidationRule>