Thesis/force-app/main/default/objects/Animal__c/validationRules/BirthdayValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthdayValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Birthdate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Birthday can&apos;t be in future</errorMessage>
</ValidationRule>