Thesis/force-app/main/default/objects/Animal__c/listViews/InAdoptationProcess.listView-meta.xml
<ListView>
    <fullName>InAdoptationProcess</fullName>
    <columns>NAME</columns>
    <columns>AnimalAdaptationStatus__c</columns>
    <columns>Age__c</columns>
    <columns>Breed__c</columns>
    <columns>Color__c</columns>
    <columns>Weight__c</columns>
    <columns>Height__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AnimalAdaptationStatus__c</field>
        <operation>notEqual</operation>
        <value>Waiting for adaptation</value>
    </filters>
    <label>In adoption process</label>
</ListView>