Thesis/force-app/main/default/objects/Animal__c/listViews/WaitingForAdoptationListView.listView-meta.xml
<ListView>
    <fullName>WaitingForAdoptationListView</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Breed__c</columns>
    <columns>Color__c</columns>
    <columns>Weight__c</columns>
    <columns>Height__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AnimalAdaptationStatus__c</field>
        <operation>equals</operation>
        <value>Waiting for adaptation</value>
    </filters>
    <label>Waiting for adoption</label>
</ListView>